--- a/app/src/styles/StartSession.module.css
+++ b/app/src/styles/StartSession.module.css
@@ -1,10 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
+.create {
+    display: flex
+}
+
 .container {
     display: inline-flex;
     flex-direction: column;
     font-family: 'Roboto', sans-serif;
     margin: 5px;
+    width: 290px;
 }
 
 .container h1 {
@@ -16,7 +21,7 @@
     color: black;
     font-weight: 700;
     font-size: 20px;
-    padding: 5px;
+    padding: 10px 5px;
     outline: none;
     border-radius: 5px;
     box-shadow: 1px 1px 4px black;
@@ -25,17 +30,31 @@
 }
 
 .container label {
-    font-size: 18px;
-    margin: 5px 0px;
+    font-size: 20px;
+    margin: 10px 0px;
 }
 
 .container input {
     padding: 5px;
     margin: 5px 0px;
+    margin-bottom: 15px;
+    width: 95%;
+    font-size: 18px;
+    color: black;
+    background-color: white;
+    box-shadow: 1px 1px 3px rgb(0, 0, 0);
 }
-.userId {
+
+.inputLabel, .id {
+    width: 100%;
+    text-align: left;
+}
+
+.container .userId {
     background-color: cyan;
     color: black;
     padding: 0px 5px;
-    font-weight: 700;
+    font-size: 22px;
+    font-weight: 900;
+    letter-spacing: 1px;
 }
