--- a/vscode-extension/extension/src/app/css/PiChart.module.css
+++ b/vscode-extension/extension/src/app/css/PiChart.module.css
@@ -1,5 +1,13 @@
+.piChart {
+    margin-top: -5%;
+}
+
 .piChart div {
     left: -5%;
+}
+
+.piChart div g text {
+    font-size: 11px;
 }
 
 .piChart rect {
