--- a/extension/src/app/styles/PiChart.module.css
+++ b/extension/src/app/styles/PiChart.module.css
@@ -13,3 +13,12 @@
 .piChart rect {
     fill: transparent;
 }
+
+.absolute {
+    position: absolute;
+    height: 90%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
