--- a/extension/src/app/styles/Session.module.css
+++ b/extension/src/app/styles/Session.module.css
@@ -10,7 +10,7 @@
 .SessionContainer h1 {
     text-decoration: underline;
 }
-.SessionContainer button {
+.SessionContainer .end {
     background-color: var(--blue);
     color: black;
     width: 100%;
@@ -18,7 +18,8 @@
     border-radius: 5px;
     font-family: 'Kumbh Sans', sans-serif;
     padding: 10px;
-    margin-top: 5px;
+    margin-top: 15px;
+    margin-bottom: 15px;
     border: 1px solid black;
     box-shadow: 1px 1px 2px black;
     font-weight: 700;
@@ -41,4 +42,22 @@
 .SessionContainer :global(.MuiPaper-root .MuiAccordionDetails-root) .voice {
     padding: 8px;
     font-family: 'Kumbh Sans', sans-serif;
+}
+
+.text {
+    padding: 3%;
+    line-height: 1.5;
+    display: flex;
+} 
+
+.green {
+    color: green;
+}
+
+.orange:not(.red) {
+    color: orange;
+}
+
+.red {
+    color: red;
 }
